# aether

./: .gitignore  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.en.md  README.md  README.zh.md  config.json  package.json  pyproject.toml  src
plugins/aether/: AGENTS.md  config.json  pyproject.toml
plugins/aether/.codex-plugin/: plugin.json
plugins/aether/docs/: project-roadmap.md  visual-asset-memory-design.md
plugins/aether/examples/: generation-run.json  prompt-record.json  recipe-with-signature-coverage.json  recipe.json  visual-asset-candidates.json  visual-asset.json  visual-system.json
plugins/aether/schemas/: config.schema.json  generation-run.schema.json  prompt-record.schema.json  recipe.schema.json  style-card.schema.json  visual-asset-candidate.schema.json  visual-asset.schema.json  visual-system.schema.json
plugins/aether/scripts/: aether  install-local.sh  package-plugin.sh
plugins/aether/skills/aether-orchestrator/: SKILL.md
plugins/aether/skills/aether-orchestrator/agents/: openai.yaml
plugins/aether/skills/image-generate/: SKILL.md
plugins/aether/skills/image-generate/agents/: openai.yaml
plugins/aether/skills/image-generate/references/: generation-contract.md  (+1 more)
plugins/aether/skills/prompt-refine/: SKILL.md
plugins/aether/skills/style-capture/: SKILL.md
plugins/aether/skills/style-library/: SKILL.md
plugins/aether/skills/visual-asset-capture/: SKILL.md
plugins/aether/skills/visual-memory/: SKILL.md
plugins/aether/src/aether_core/: __init__.py  assets.py  chat_attachments.py  cli.py  composer.py  config.py  embeddings.py  generation_params.py  image_fingerprint.py  jsonio.py  migrations.py  output_archiving.py  panel.py  panel_bundle.py  panel_data.py  panel_export.py  panel_server.py  panel_template.py  recall.py  similarity.py  storage.py  storage_time.py  validation.py
plugins/aether/tests/: test_assets.py  test_backfill_fingerprints.py  test_candidate_batch_scripts.py  test_cli.py  test_composer.py  test_config.py  test_connect.py  test_embeddings.py  test_extract_chat_attachment.py  test_footprint_type_map.py  test_image_fingerprint.py  test_install_local.py  test_memory_report_script.py  test_migrations.py  test_panel.py  test_record_generation_script.py  test_save_prompt_record_script.py  test_storage.py  test_validation.py
(+46 files in other folders)
