[project]
name = "aether"
version = "0.0.1"
description = "Codex plugin backed visual asset memory and prompt refinement system for AI image generation."
requires-python = ">=3.9"
dependencies = []

[project.scripts]
aether = "aether_core.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
