[project]
name = "aether"
version = "0.1.0"
description = "Codex plugin backed visual asset memory and prompt refinement system for AI image generation."
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
